--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:minHeight="@dimen/list_item_height"
+    android:layout_height="@dimen/list_item_height"
     android:background="@color/tan_background">
 
     <ImageView
@@ -17,8 +15,10 @@
         android:id="@+id/text_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/list_item_height"
+        android:layout_toRightOf="@id/image_view"
         android:orientation="vertical"
         android:gravity="center_vertical"
+
         tools:background="@color/category_numbers"
         android:paddingLeft="16dp">
 
@@ -40,4 +40,13 @@
             tools:text="one"/>
     </LinearLayout>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/vedio"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_play_arrow"/>
+
+</RelativeLayout>
